# django-fsm-log

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  README.md  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test_suite.yml
django_fsm_log/: __init__.py  admin.py  apps.py  backends.py  checks.py  conf.py  ctags.tmp  decorators.py  helpers.py  managers.py  models.py  settings.py  utils.py
django_fsm_log/migrations/: 0001_initial.py  0002_auto_20150407_1013.py  0002_auto_20151207_1521.py  0003_auto_20160519_1519.py  0003_auto_20171026_1518.py  0003_merge.py  0003_statelog_description.py  0003_statelog_description_squashed_0005_description_null.py  0004_add_indices.py  0004_add_source_state.py  0004_auto_20190131_0341.py  0005_description_null.py  0006_allow_non_numeric_ids.py
django_fsm_log/south_migrations/: 0001_initial.py  0002_auto__add_field_statelog_description.py  ctags.tmp
docs/: conf.py  index.rst
example_project/: settings.py
tests/: admin.py  conftest.py  ctags.tmp  models.py  settings.py  test_admin.py  test_deprecations.py  test_manager.py  test_model.py  test_settings.py  tests.py  urls.py
